# Rust-Examples-New

./: .gitignore  README.md
cli/: Cargo.toml
cli/tests/: cli.rs
command_line/test_exs/: Cargo.toml
common_collection/: Cargo.toml
common_collection/src/: hashmap.rs  main.rs  utf8_and_strings.rs  vectors.rs
control_flow_demo/: Cargo.toml
control_flow_demo/src/: main.rs
csv_data/: Cargo.toml
csv_data/src/: main.rs
dangling_pointer/: Cargo.toml
dangling_pointer/src/: main.rs
data_types_demo/: Cargo.toml
data_types_demo/src/: arrays.rs  main.rs  tuples.rs
enums_pattern_matching_demo/: Cargo.toml
enums_pattern_matching_demo/src/: concise_control_flow.rs  main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs  recoverable_errors_with_result.rs
functions_demo/: Cargo.toml
functions_demo/src/: main.rs
generic_data_types/: Cargo.toml
generic_data_types/src/: lib.rs  main.rs
generic_data_types_traits_lifetimes/: Cargo.toml
generic_data_types_traits_lifetimes/src/: main.rs  traits.rs
grrs/: Cargo.toml  test.txt.1
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
guessing_game/src/~/.vim/undodir/: %home%arpangreat%dotfiles%nvim%plugin%plugins.vim
guessing_game/~/.vim/undodir/: %home%arpangreat%Rust-Examples-New%guessing_game%Cargo.toml  %home%arpangreat%Rust-Examples-New%guessing_game%src%main.rs  %home%arpangreat%dotfiles%nvim%init.lua
inline_python/: Cargo.toml  new.py
int_every_format/: Cargo.toml
ownership_demo/: Cargo.toml
restaurant/: Cargo.toml
struct_demo/: Cargo.toml
variables_demo/: Cargo.toml
(+28 files in other folders)
